Love Calculator for you

--- a/index.html
+++ b/index.html
@@ -107,12 +107,9 @@
             let loveScore = Math.floor(Math.random() * 100);
             if (yourName.value == "" || herName.value == ""){
                 alert("Fill up the unput")
-            }else if (loveScore > 40 && loveScore <= 80 ){
-                theResult.innerHTML = loveScore + "%" 
-            }else if (loveScore <= 40 ){
-                theResult.innerHTML = loveScore + "%"
+            }else{
+                theResult.innerHTML = loveScore + "%" ;
             }
-
         }
         function clearResult() {
             theResult.innerHTML = "";
