--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                 alert("Fill up the unput")
             }else if (loveScore > 40 && loveScore <= 80){
                 theResult.innerHTML = loveScore + "%" ;
-                relationStatus.innerHTML = yourName.value + " and " + herName.value + " is " + loveScore + "% your have a good relationship!";
+                relationStatus.innerHTML = yourName.value + "'s and " + herName.value + "'s love score is " + loveScore + "% your have a good relationship!";
             }else if (loveScore < 40){
                 theResult.innerHTML = loveScore + "%" ;
-                relationStatus.innerHTML = yourName.value + " and " + herName.value + " is " + loveScore + "% you relationship is bad😭";
+                relationStatus.innerHTML = yourName.value + "'s and " + herName.value + "'s love score is " + loveScore + "% you relationship is bad😭";
             }
         }
         function reload() {
